[gd_scene load_steps=2 format=2]

[ext_resource path="res://entities/movable.gd" type="Script" id=1]

[node name="Movable" type="Area2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="TweenMove" type="Tween" parent="."]

[node name="RayMove" type="RayCast2D" parent="."]
cast_to = Vector2( 32, 0 )
collision_mask = 4
collide_with_areas = true

[connection signal="tween_all_completed" from="TweenMove" to="." method="_on_TweenMove_tween_all_completed"]
